# me326-team7

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
Docker/: Dockerfile
docs/: client_machine_setup.md  depth_alignment.md  remote_setup.md  task1_architecture.md
ros2_ws/: setup_env.bash
ros2_ws/src/tidybot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tidybot_bringup/config/: right_arm_pantilt.yaml
ros2_ws/src/tidybot_bringup/launch/: real.launch.py  robot.launch.py  task.launch.py
ros2_ws/src/tidybot_bringup/lib/assets/mujoco/: scene_pickup.xml
ros2_ws/src/tidybot_bringup/rviz/: tidybot.rviz
ros2_ws/src/tidybot_bringup/scripts/: example_state_machine.py  frontier_exploration.py  navigate_to_object.py  objective1_task.py  pick_up_block.py  pick_up_block_real.py  task1_retrieve.py  task_navigate_to_position.py  test_arms.py  test_arms_real.py  test_arms_sim.py  test_base.py  test_base_sim.py  test_camera.py  test_camera_sim.py  test_full_robot.py  test_grasp_service.sh  test_grippers_sim.py  test_microphone.py  test_motion_planner.py  test_pan_tilt_real.py  test_planner_sim.py  test_simple_arm.py  voice_command.py
ros2_ws/src/tidybot_bringup/scripts/subtasks/: __init__.py  navigate_to.py  pick_up_object.py  scan_for_object.py
ros2_ws/src/tidybot_bringup/utilities/: align_depth_to_rgb.py  robot_helpers.py
ros2_ws/src/tidybot_control/: package.xml  setup.py
ros2_ws/src/tidybot_control/tidybot_control/: arm_wrapper_node.py  microphone_node.py
ros2_ws/src/tidybot_description/: package.xml
ros2_ws/src/tidybot_description/urdf/: tidybot_wx250s.urdf.xacro
ros2_ws/src/tidybot_ik/tidybot_ik/: motion_planner_node.py
ros2_ws/src/tidybot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/tidybot_msgs/msg/: Detection2D.msg  Detection2DArray.msg  ObjectPose.msg
ros2_ws/src/tidybot_msgs/srv/: AudioRecord.srv  Detect.srv  LocalizeObject.srv  PlanGrasp.srv
ros2_ws/src/tidybot_mujoco_bridge/: package.xml
ros2_ws/src/tidybot_mujoco_bridge/tidybot_mujoco_bridge/: mujoco_bridge_node.py
ros2_ws/src/tidybot_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/tidybot_perception/config/: perception_params.yaml
ros2_ws/src/tidybot_perception/tidybot_perception/: detector_node.py  grasp_checker.py  grasp_planner_node.py  object_localizer_node.py
simulation/assets/mujoco/: scene_obstacles.xml  scene_pickup.xml  scene_wx250s_bimanual.xml  tidybot_wx250s_bimanual.xml
simulation/scripts/: MUJOCO_LOG.TXT  drive_tidybot_wx250s.py  pick_up_block_sim.py  test_move_sim.py
