[project]
name = "collaborative-robotics-2026"
version = "0.1.0"
description = "TidyBot2 with WX250s arm control for MuJoCo simulation and Real Hardware"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core simulation
    "mujoco>=3.2.0",
    "numpy>=1.26.0,<2.0",
    "glfw>=2.8.0",
    # Visualization
    "opencv-python>=4.0.0",
    "pillow>=11.0.0",
    # Robotics / IK (mink + its dependencies)
    "mink>=0.0.6",
    "pin>=2.7.0",
    "eigenpy>=3.5.0",
    "hpp-fcl>=2.4.0",
    "qpsolvers>=4.5.0",
    "quadprog>=0.1.13",
    # Hardware (for real robot)
    "pyrealsense2>=2.55.0",
    "catkin-pkg>=1.1.0",
    "empy==3.3.4",
    "lark>=1.1.0",
    "trimesh>=4.11.1",
    "fast-simplification>=0.1.13",
    "phoenix6>=26.1.0",
    "ruckig>=0.15.3",
    "dynamixel-sdk>=4.0.3",
    "threadpoolctl>=3.6.0",
    "transforms3d>=0.4.1",
    "modern-robotics>=1.1.0",
    # Grasp detection dependencies
    "open3d>=0.18.0",
    "scipy>=1.12.0",
]

# =============================================================================
# COMMENTED OUT - Uncomment as needed
# =============================================================================
# The following dependencies are not currently used but may be useful later.
# Uncomment and run `uv sync` to install.
#
# [Numerical / Scientific]
# "scipy>=1.12.0",
# "matplotlib>=3.8.0",
#
# [Video / 3D]
# "imageio>=2.37.0",
# "imageio-ffmpeg>=0.6.0",
# "open3d>=0.19.0",
#
# [Robotics utilities]
# "spatialmath-python>=1.1.0",
# "pyquaternion>=0.9.9",
#
# [Data handling]
# "pandas>=2.2.0",
# "h5py>=3.11.0",
# "pyyaml>=6.0.0",
#
# [ML/DL - Large downloads, ~4-5GB total]
# "torch>=2.0.0",
# "torchvision>=0.15.0",
# "transformers>=4.51.0",
# "diffusers>=0.32.0",
# "accelerate>=1.6.0",
# "safetensors>=0.5.0",
# "huggingface-hub>=0.30.0",
#
# [Utilities]
# "tqdm>=4.66.0",
# "colorama>=0.4.6",
# "python-dotenv>=1.1.0",
# "requests>=2.32.0",

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyterlab>=4.1.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "pre-commit>=4.2.0",
]

web = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

wandb = [
    "wandb>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "jupyterlab>=4.1.0",
    "ipykernel>=6.29.0",
]
